[gd_scene load_steps=5 format=3 uid="uid://cew8sq3o40n23"]

[ext_resource type="Script" path="res://Scenes/Endscreen.gd" id="1_tnqmw"]
[ext_resource type="Texture2D" uid="uid://cgt34fbypunff" path="res://Graphics/menubackground.png" id="2_leil6"]
[ext_resource type="FontFile" uid="uid://dtreqxrld72uy" path="res://Graphics/High Speed.ttf" id="4_7jter"]
[ext_resource type="Texture2D" uid="uid://kaymleewqv6q" path="res://Graphics/istockphoto-1345388323-612x612.png" id="5_cbu4t"]

[node name="Levelmenu" type="Node2D"]
script = ExtResource("1_tnqmw")

[node name="Background" type="Sprite2D" parent="."]
position = Vector2(581, 326)
scale = Vector2(0.65, 0.65)
texture = ExtResource("2_leil6")

[node name="scrap" type="Label" parent="Background"]
offset_left = -832.308
offset_top = -456.923
offset_right = -503.308
offset_bottom = -381.923
theme_override_fonts/font = ExtResource("4_7jter")
theme_override_font_sizes/font_size = 50
text = "Scrap: 0"

[node name="Sprite2D" type="Sprite2D" parent="Background"]
position = Vector2(743.077, -369.231)
scale = Vector2(0.307692, 0.307692)
texture = ExtResource("5_cbu4t")

[node name="rank" type="Label" parent="Background/Sprite2D"]
anchors_preset = -1
anchor_left = -2.06587
offset_left = -1080.0
offset_top = -265.0
offset_right = -366.0
offset_bottom = -43.0
theme_override_fonts/font = ExtResource("4_7jter")
theme_override_font_sizes/font_size = 150
text = "Rank 1"
horizontal_alignment = 2
metadata/_edit_use_anchors_ = true

[node name="XP" type="Label" parent="Background/Sprite2D"]
anchors_preset = -1
anchor_left = -1.94611
offset_left = -1090.0
offset_top = -15.0
offset_right = -376.0
offset_bottom = 207.0
theme_override_fonts/font = ExtResource("4_7jter")
theme_override_font_sizes/font_size = 150
text = "0 XP"
horizontal_alignment = 2
metadata/_edit_use_anchors_ = true

[node name="ProgressBar" type="ProgressBar" parent="Background"]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -1373.85
offset_top = -892.308
offset_right = -536.846
offset_bottom = -796.308
grow_horizontal = 2
grow_vertical = 0
theme_override_fonts/font = ExtResource("4_7jter")
theme_override_font_sizes/font_size = 30
value = 20.0

[node name="Label" type="Label" parent="Background/ProgressBar"]
layout_mode = 0
offset_left = -344.615
offset_top = 23.0769
offset_right = -10.6154
offset_bottom = 148.077
theme_override_fonts/font = ExtResource("4_7jter")
theme_override_font_sizes/font_size = 40
text = "Next Rank:"

[node name="VBoxContainer" type="VBoxContainer" parent="Background"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -1289.0
offset_top = -902.0
offset_right = -756.0
offset_bottom = -416.0
grow_horizontal = 2
grow_vertical = 2

[node name="Level" type="Label" parent="Background/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("4_7jter")
theme_override_font_sizes/font_size = 50
text = "Level 1

Collected:"

[node name="collected_Scrap" type="Label" parent="Background/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("4_7jter")
theme_override_font_sizes/font_size = 50
text = "52 Scrap"

[node name="collected_XP" type="Label" parent="Background/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("4_7jter")
theme_override_font_sizes/font_size = 50
text = "1321 XP"

[node name="start" type="Button" parent="Background"]
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -1375.38
offset_top = -706.154
offset_right = -1093.38
offset_bottom = -629.154
grow_horizontal = 0
grow_vertical = 0
theme_override_fonts/font = ExtResource("4_7jter")
theme_override_font_sizes/font_size = 40
text = "Next"

[connection signal="pressed" from="Background/start" to="." method="_on_start_pressed"]
